# bananas

./: ARCHITECTURE.md  BananasRobot.py  BananasRobotMain.py  IKsolver.py  LICENSE  Pallet_to_armJSON.py  README.md  Receiver.py  Remotecontrol.py  RobotReceiver.py  angle conversion.py  block_output.json  block_output_computed.json  demo.py  pose.txt  run.py  target_loader.py  tested_locations.txt  update_and_run.sh
.github/workflows/: build.yml
aruco/: .clang-tidy  CMakeLists.txt  Dockerfile  Doxyfile  README.md  affine_rotation.cpp  build_images.sh  positioner.cpp  run_lint.sh  world.cpp  world.h
aruco/apps/: CMakeLists.txt  generate_board.cpp  gltf_exporter.cpp  positioner.cpp  ros_video_publisher.cpp
aruco/containers/aruco-base/: Dockerfile
aruco/containers/build-mavsdk/: Dockerfile
aruco/containers/build-ogre/: Dockerfile
aruco/containers/build-opencv/: Dockerfile
aruco/containers/build-px4/: Dockerfile
aruco/gazebo/: CMakeLists.txt  box_world.sdf  boxes.json  camera.json
aruco/gazebo/demo_world/: CMakeLists.txt
aruco/include/bananas_aruco/: affine_rotation.h  board.h  box_board.h  concrete_board.h  grid_board.h  mavlink.h  world.h
aruco/include/bananas_aruco/visualization/: visualizer.h
aruco/src/: CMakeLists.txt  affine_rotation.cpp  board.cpp  box_board.cpp  concrete_board.cpp  grid_board.cpp  world.cpp
aruco/src/visualization/: CMakeLists.txt  visualizer.cpp
aruco/tests/: CMakeLists.txt  box_board.cpp  grid_board.cpp  mavlink.cpp
aruco/visualization/: visualizer.cpp  visualizer.h
palletization/: Leo's_original_3D_tetris.py  README.md  configurations.json  configurations.py  logic.py  user_input.py  visualizer.py
point-cloud-box-detection/: .gitignore  README.md  requirements.txt  setup.py
point-cloud-box-detection/example-scripts/: .gitignore  convert2ply.py  detect_box_each_ply.py  read_n_count_frame.py  view_as_seq.py  view_ply.py
point-cloud-box-detection/ply_processor/: point_cloud_processor.py
pointclouds/open3d_box_detection/: pyproject.toml
pointclouds/open3d_box_detection/src/open3d_box_detection/: __init__.py
pointclouds/pcl_box_detection/: CMakeLists.txt  README.md  box_detection.cpp  box_detection2.cpp  store_clouds.cpp  test_imu.cpp
robot-controls/: README.md  update_and_run.sh
robot-controls/Arduino/: SensorCode.ino
robot_codebase/: BananasRobotMain.py  SensorInterface.py
robot_controls/: Pallet_to_armJSON.py  Remotecontrol.py  Sender.py  demo.py  pose.txt  robot_config.py  tested_locations.txt
simulation/: .clang-tidy  CMakeLists.txt  positioner.cpp  world.cpp  world.h
simulation/visualization/: visualizer.cpp  visualizer.h
